--- a/ImageSegmentation.ipynb
+++ b/ImageSegmentation.ipynb
@@ -2,15 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": "/home/abraham/anaconda3/envs/tf/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n/home/abraham/anaconda3/envs/tf/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n/home/abraham/anaconda3/envs/tf/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n/home/abraham/anaconda3/envs/tf/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n/home/abraham/anaconda3/envs/tf/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n/home/abraham/anaconda3/envs/tf/lib/python3.7/site-packages/tensorflow/python/framework/dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n/home/abraham/anaconda3/envs/tf/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n/home/abraham/anaconda3/envs/tf/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n/home/abraham/anaconda3/envs/tf/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n/home/abraham/anaconda3/envs/tf/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n/home/abraham/anaconda3/envs/tf/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n/home/abraham/anaconda3/envs/tf/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import os\n",
@@ -63,22 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "WARNING:tensorflow:From /home/abraham/anaconda3/envs/tf/lib/python3.7/site-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\nInstructions for updating:\nCall initializer instance with the dtype argument instead of passing it to the constructor\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = resnet50_encoder_unet_decoder(num_classes=NO_CLASSES, input_size=INPUT_SHAPE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,15 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "Epoch 1/10\nWARNING:tensorflow:From /home/abraham/anaconda3/envs/tf/lib/python3.7/site-packages/tensorflow/python/ops/math_grad.py:1250: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\nInstructions for updating:\nUse tf.where in 2.0, which has the same broadcast rule as np.where\n743/743 [==============================] - 383s 515ms/step - loss: 0.7538 - acc: 0.7818 - iou_coef: 0.5455 - val_loss: 1.1653 - val_acc: 0.6392 - val_iou_coef: 0.3746\nEpoch 2/10\n743/743 [==============================] - 359s 483ms/step - loss: 0.4901 - acc: 0.8530 - iou_coef: 0.6624 - val_loss: 0.5228 - val_acc: 0.8415 - val_iou_coef: 0.6572\nEpoch 3/10\n743/743 [==============================] - 367s 494ms/step - loss: 0.4117 - acc: 0.8715 - iou_coef: 0.6997 - val_loss: 0.4724 - val_acc: 0.8574 - val_iou_coef: 0.6958\nEpoch 4/10\n743/743 [==============================] - 374s 503ms/step - loss: 0.3622 - acc: 0.8859 - iou_coef: 0.7270 - val_loss: 0.4648 - val_acc: 0.8584 - val_iou_coef: 0.6892\nEpoch 5/10\n743/743 [==============================] - 377s 507ms/step - loss: 0.3285 - acc: 0.8956 - iou_coef: 0.7469 - val_loss: 0.4703 - val_acc: 0.8615 - val_iou_coef: 0.6994\nEpoch 6/10\n743/743 [==============================] - 380s 511ms/step - loss: 0.3033 - acc: 0.9032 - iou_coef: 0.7618 - val_loss: 0.4789 - val_acc: 0.8646 - val_iou_coef: 0.7125\nEpoch 7/10\n743/743 [==============================] - 382s 514ms/step - loss: 0.2847 - acc: 0.9089 - iou_coef: 0.7735 - val_loss: 0.4803 - val_acc: 0.8665 - val_iou_coef: 0.7211\nEpoch 8/10\n743/743 [==============================] - 382s 514ms/step - loss: 0.2718 - acc: 0.9130 - iou_coef: 0.7817 - val_loss: 0.4801 - val_acc: 0.8677 - val_iou_coef: 0.7191\nEpoch 9/10\n743/743 [==============================] - 383s 515ms/step - loss: 0.2588 - acc: 0.9170 - iou_coef: 0.7901 - val_loss: 0.5102 - val_acc: 0.8651 - val_iou_coef: 0.7203\nEpoch 10/10\n743/743 [==============================] - 386s 520ms/step - loss: 0.2482 - acc: 0.9205 - iou_coef: 0.7971 - val_loss: 0.5157 - val_acc: 0.8671 - val_iou_coef: 0.7254\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = model.fit_generator(train_gen, epochs=NO_OF_EPOCHS, \n",
     "                          steps_per_epoch = (NO_OF_TRAINING_FRAMES//BATCH_SIZE),\n",
@@ -115,7 +93,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,11 +110,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "prediction = model.predict(np.expand_dims(train_img, axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = np.argmax(prediction[0], axis=-1)\n",
+    "labels_colored = np.empty(shape=(labels.shape[0], labels.shape[1],3))\n",
+    "for lab in color_mapping:\n",
+    "    labels_colored[labels == lab] = np.array(color_mapping[lab])\n",
+    "\n",
+    "cv2.imwrite('segmentation_example.png', labels_colored)"
    ]
   }
  ],
@@ -157,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
